--- a/production/storage/hpc-nfs-web-service.yml
+++ b/production/storage/hpc-nfs-web-service.yml
@@ -1,10 +1,9 @@
- 
 kind: Service
 apiVersion: v1
 metadata:
-  name: nfs-web
+  name: hpc-nfs-web
 spec:
   ports:
     - port: 80
   selector:
-    role: web-frontend
+    app: web-frontend
