--- a/development/hpc-nfs-provisioner.yml
+++ b/development/hpc-nfs-provisioner.yml
@@ -25,11 +25,11 @@ spec:
             - name: PROVISIONER_NAME
               value: cam-k8s/nfs
             - name: NFS_SERVER
-              value: nfs.biosimulations.dev
+              value: hpc-nfs.default.svc.cluster.local
             - name: NFS_PATH
-              value: /nfs
+              value: /k8sdata
       volumes:
         - name: nfs-client-root
           nfs:
-            server: nfs.biosimulations.dev
-            path: /nfs
+            server: hpc-nfs.default.svc.cluster.local
+            path: /k8sdata
