--- a/production/apps/dispatch-service.yml
+++ b/production/apps/dispatch-service.yml
@@ -18,15 +18,14 @@ spec:
       volumes:
         - name: secret
           secret:
-            secretName: dispatch-service-secrets-6mtgbc4855
+            secretName: dispatch-service-secrets
         - name: task-pv-storage
           nfs:
             server: uchc-app.bioscience-ct.net
             path: /k8sdata
       containers:
         - name: biosimulations-dispatch-service
-          image: 'crbm/biosimulations-dispatch-service:dev'
-          # TODO: Move this ENV to config file
+          image: "crbm/biosimulations-dispatch-service:dev"
           env:
             - name: FILE_STORAGE
               value: /sharedFiles
