--- a/production/config/kustomization.yml
+++ b/production/config/kustomization.yml
@@ -1,17 +1,22 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+generatorOptions:
+  disableNameSuffixHash: true
+
 secretGenerator:
   - name: biosimulations-api-secrets
     namespace: default
     files:
-      - config/biosimulations-api/secret.env
+      - biosimulations-api/secret.env
   - name: account-api-secrets
     namespace: default
     files:
-      - config/account-api/secret.env
+      - account-api/secret.env
   - name: dispatch-api-secrets
     namespace: default
     files:
-      - config/dispatch-api/secret.env
+      - dispatch-api/secret.env
   - name: dispatch-service-secrets
     namespace: default
     files:
-      - config/dispatch-service/secret.env
+      - dispatch-service/secret.env
