--- a/production/storage/hpc-nfs-volume.yaml
+++ b/production/storage/hpc-nfs-volume.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   capacity:
     storage: 100Gi
+  storageClassName: hpc-nfs
   accessModes:
     - ReadWriteMany
-  nfs: 
-    server: nfs-server.default.svc.cluster.local
+  nfs:
+    server: hpc-nfs.default.svc.cluster.local
     path: "/k8sdata"
