--- a/production/resources/mongo.yml
+++ b/production/resources/mongo.yml
@@ -1,7 +1,7 @@
 apiVersion: mongodb.com/v1
 kind: MongoDB
 metadata:
-  name: example-mongodb
+  name: mongo
 spec:
   members: 3
   type: ReplicaSet
