--- a/production/storage/hpc-nfs-volume.yaml
+++ b/production/storage/hpc-nfs-volume.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   capacity:
     storage: 100Gi
-  storageClassName: hpc-nfs
+  storageClassName: ""
   accessModes:
     - ReadWriteMany
   nfs:
