--- a/production/ingress/ingress.yml
+++ b/production/ingress/ingress.yml
@@ -24,5 +24,5 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: dispatch-api-service
+              serviceName: biosimulations-dispatch-api
               servicePort: 80
