--- a/production/apps/dispatch-api.yml
+++ b/production/apps/dispatch-api.yml
@@ -22,7 +22,7 @@ spec:
         - name: task-pv-storage
           nfs:
             server: uchc-app.bioscience-ct.net
-            path: /k8sdata
+            path: /projects/CRBM/biosimulations
       containers:
         - name: biosimulations-dispatch-api
           image: "crbm/biosimulations-dispatch-api:dev"
