update image names

--- a/development/dispatch_api.yml
+++ b/development/dispatch_api.yml
@@ -24,7 +24,7 @@ spec:
             claimName: task-pv-claim
       containers:
         - name: biosimulations-dispatch-api
-          image: 'crbm/biosimulations-dispatch-api:dev'
+          image: "biosimulations/dispatch-api:dev"
           ports:
             - containerPort: 3333
           env:
