--- a/development/accounts.yml
+++ b/development/accounts.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: account-api
-          image: crbm/account-api:latest
+          image: biosimulations/account-api:latest
           imagePullPolicy: "Always"
           resources:
             limits:
