--- a/development/dispatch_service.yml
+++ b/development/dispatch_service.yml
@@ -24,7 +24,7 @@ spec:
             claimName: task-pv-claim
       containers:
         - name: biosimulations-dispatch-service
-          image: 'crbm/biosimulations-dispatch-service:dev'
+          image: "biosimulations/dispatch-service:dev"
           # TODO: Move this ENV to config file
           env:
             - name: FILE_STORAGE
