--- a/development/resources.yml
+++ b/development/resources.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: biosimulations-api
-          image: crbm/biosimulations-api:latest
+          image: biosimulations/platform-api:latest
           imagePullPolicy: "Always"
           resources:
             limits:
