--- a/production/config/dispatch-api/secret.env
+++ b/production/config/dispatch-api/secret.env
@@ -1,4 +1,4 @@
 NATS_HOST=nats://10.96.0.2
-NATS_CLIENT_PORT=
-NATS_USERNAME=
-NATS_PASSWORD=
+NATS_CLIENT_PORT=4222
+NATS_USERNAME=ruser
+NATS_PASSWORD=T0pS3cr3t
