add ontology domain to certificate

--- a/production/ingress/biosimulations-certificate.yml
+++ b/production/ingress/biosimulations-certificate.yml
@@ -7,3 +7,4 @@ spec:
     - api.biosimulations.dev
     - account.biosimulations.dev
     - dispatch.biosimulations.dev
+    - ontology.biosimulations.dev
