--- a/production/apps/platform-api.yml
+++ b/production/apps/platform-api.yml
@@ -2,21 +2,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: biosimulations-api
-  name: biosimulations-api
+    app: platform-api
+  name: platform-api
   namespace: default
 spec:
   selector:
     matchLabels:
-      app: biosimulations-api
+      app: platform-api
   replicas: 3
   template:
     metadata:
       labels:
-        app: biosimulations-api
+        app: platform-api
     spec:
       containers:
-        - name: biosimulations-api
+        - name: platform-api
           image: biosimulations/platform-api:dev
           imagePullPolicy: "Always"
           volumeMounts:
@@ -28,20 +28,20 @@ spec:
       volumes:
         - name: secret
           secret:
-            secretName: biosimulations-api-secrets
+            secretName: platform-api-secrets
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: biosimulations-api-service
+  name: platform-api
   namespace: default
   labels:
-    app: biosimulations-api
+    app: platform-api
 spec:
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3333
   selector:
-    app: biosimulations-api
+    app: platform-api
   type: NodePort
