--- a/production/config/dispatch-service/secret.env
+++ b/production/config/dispatch-service/secret.env
@@ -4,7 +4,7 @@ HPC_SSH_USERNAME=crbmapi
 HPC_SFTP_HOST=transfer.cam.uchc.edu
 HPC_SFTP_PORT=22
 HPC_SFTP_USERNAME=crbmapi
-NATS_HOST=nats://10.96.0.2
+NATS_HOST=nats://nats-cluster
 NATS_CLIENT_PORT=4222
 NATS_USERNAME=ruser
 NATS_PASSWORD=T0pS3cr3t
