--- a/production/custom/nats/00-prereqs.yaml
+++ b/production/custom/nats/00-prereqs.yaml
@@ -1,11 +1,16 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: nats-io
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nats-operator
   # Change to the name of the namespace where to install NATS Operator.
   # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
-  namespace: default
+  namespace: nats-io
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -17,11 +22,11 @@ roleRef:
   kind: ClusterRole
   name: nats-operator
 subjects:
-- kind: ServiceAccount
-  name: nats-operator
-  # Change to the name of the namespace where to install NATS Operator.
-  # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
-  namespace: default
+  - kind: ServiceAccount
+    name: nats-operator
+    # Change to the name of the namespace where to install NATS Operator.
+    # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
+    namespace: nats-io
 
 # NOTE: When performing multiple namespace-scoped installations, all
 # "nats-operator" service accounts (across the different namespaces)
@@ -40,77 +45,77 @@ kind: ClusterRole
 metadata:
   name: nats-operator
 rules:
-# Allow creating CRDs
-- apiGroups:
-  - apiextensions.k8s.io
-  resources:
-  - customresourcedefinitions
-  verbs: ["get", "list", "create", "update", "watch"]
+  # Allow creating CRDs
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+    verbs: ["get", "list", "create", "update", "watch"]
 
-# Allow all actions on NATS Operator manager CRDs
-- apiGroups:
-  - nats.io
-  resources:
-  - natsclusters
-  - natsserviceroles
-  verbs: ["*"]
+  # Allow all actions on NATS Operator manager CRDs
+  - apiGroups:
+      - nats.io
+    resources:
+      - natsclusters
+      - natsserviceroles
+    verbs: ["*"]
 
-# Allowed actions on Pods
-- apiGroups: [""]
-  resources:
-  - pods
-  verbs: ["create", "watch", "get", "patch", "update", "delete", "list"]
+  # Allowed actions on Pods
+  - apiGroups: [""]
+    resources:
+      - pods
+    verbs: ["create", "watch", "get", "patch", "update", "delete", "list"]
 
-# Allowed actions on Services
-- apiGroups: [""]
-  resources:
-  - services
-  verbs: ["create", "watch", "get", "patch", "update", "delete", "list"]
+  # Allowed actions on Services
+  - apiGroups: [""]
+    resources:
+      - services
+    verbs: ["create", "watch", "get", "patch", "update", "delete", "list"]
 
-# Allowed actions on Secrets
-- apiGroups: [""]
-  resources:
-  - secrets
-  verbs: ["create", "watch", "get", "update", "delete", "list"]
+  # Allowed actions on Secrets
+  - apiGroups: [""]
+    resources:
+      - secrets
+    verbs: ["create", "watch", "get", "update", "delete", "list"]
 
-# Allow all actions on some special subresources
-- apiGroups: [""]
-  resources:
-  - pods/exec
-  - pods/log
-  - serviceaccounts/token
-  - events
-  verbs: ["*"]
+  # Allow all actions on some special subresources
+  - apiGroups: [""]
+    resources:
+      - pods/exec
+      - pods/log
+      - serviceaccounts/token
+      - events
+    verbs: ["*"]
 
-# Allow listing Namespaces and ServiceAccounts
-- apiGroups: [""]
-  resources:
-  - namespaces
-  - serviceaccounts
-  verbs: ["list", "get", "watch"]
+  # Allow listing Namespaces and ServiceAccounts
+  - apiGroups: [""]
+    resources:
+      - namespaces
+      - serviceaccounts
+    verbs: ["list", "get", "watch"]
 
-# Allow actions on Endpoints
-- apiGroups: [""]
-  resources:
-  - endpoints
-  verbs: ["create", "watch", "get", "update", "delete", "list"]
+  # Allow actions on Endpoints
+  - apiGroups: [""]
+    resources:
+      - endpoints
+    verbs: ["create", "watch", "get", "update", "delete", "list"]
 
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nats-server
-  namespace: default
+  namespace: nats-io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: nats-server
 rules:
-- apiGroups: [""]
-  resources:
-  - nodes
-  verbs: ["get"]
+  - apiGroups: [""]
+    resources:
+      - nodes
+    verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -121,6 +126,6 @@ roleRef:
   kind: ClusterRole
   name: nats-server
 subjects:
-- kind: ServiceAccount
-  name: nats-server
-  namespace: default
+  - kind: ServiceAccount
+    name: nats-server
+    namespace: nats-io
