update ingress with tls

--- a/production/custom/nginx-ingress/03-contoller.yml
+++ b/production/custom/nginx-ingress/03-contoller.yml
@@ -31,6 +31,7 @@ metadata:
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
+  loadBalancerIP: biosimulations
   ports:
     - name: http
       port: 80
