--- a/production/ingress/biosimulations-ingress.yml
+++ b/production/ingress/biosimulations-ingress.yml
@@ -3,34 +3,37 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
-   
-  name: biosimulations-nginx-ingress
+    cert-manager.io/issuer: "letsencrypt-staging"
+  name: ingress
   namespace: default
 spec:
-  rules: 
-    - host: api.biosimulations.dev
-      http:
-        paths:
-          - backend:
-              serviceName: platform-api
-              servicePort: 80
+  tls:
+    - hosts:
+        - account.biosimulations.dev
+        - api.biosimulations.dev
+        - dispatch.biosimulations.dev
+        - ontology.biosimulations.dev
+
+      secretName: biosimulations-certificate
+  rules:
     - host: account.biosimulations.dev
       http:
         paths:
           - backend:
               serviceName: account-api
               servicePort: 80
+
+    - host: api.biosimulations.dev
+      http:
+        paths:
+          - backend:
+              serviceName: platform-api
+              servicePort: 80
     - host: dispatch.biosimulations.dev
       http:
         paths:
           - backend:
               serviceName: dispatch-api
-              servicePort: 80
-    - host: api.biosimulators.org
-      http:
-        paths:
-          - backend:
-              serviceName: simulator-api
               servicePort: 80
 
     - host: ontology.biosimulations.dev
