--- a/production/custom/nginx-ingress/03-contoller.yml
+++ b/production/custom/nginx-ingress/03-contoller.yml
@@ -31,7 +31,7 @@ metadata:
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
-  loadBalancerIP: biosimulations
+  loadBalancerIP: 34.123.157.17
   ports:
     - name: http
       port: 80
