--- a/production/ingress/biosimulations-ingress.yml
+++ b/production/ingress/biosimulations-ingress.yml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "letsencrypt-staging"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   name: ingress
   namespace: default
 spec:
@@ -13,8 +13,8 @@ spec:
         - api.biosimulations.dev
         - dispatch.biosimulations.dev
         - ontology.biosimulations.dev
+      secretName: biosimulations-ingress-certificate
 
-      secretName: biosimulations-certificate
   rules:
     - host: account.biosimulations.dev
       http:
