--- a/production/apps/dispatch-api.yml
+++ b/production/apps/dispatch-api.yml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: dispatch-api
     spec:
+      securityContext:
+        runAsUser: 16997
+        runAsGroup: 10000
+        fsGroup: 16521
       volumes:
         - name: secret
           secret:
