Fixes #4, Pull latest dev container everytime for API/Service

--- a/production/apps/dispatch-api.yml
+++ b/production/apps/dispatch-api.yml
@@ -30,6 +30,7 @@ spec:
       containers:
         - name: dispatch-api
           image: "biosimulations/dispatch-api:dev"
+          imagePullPolicy: "Always"
           ports:
             - containerPort: 3333
           env:
