--- a/production/config/dispatch-api/secret.env
+++ b/production/config/dispatch-api/secret.env
@@ -2,4 +2,4 @@ NATS_HOST=nats://nats-cluster
 NATS_CLIENT_PORT=4222
 NATS_USERNAME=ruser
 NATS_PASSWORD=T0pS3cr3t
-MONGODB_URI=mongodb+srv://crbmapi:egRBHTYDiTDyWXuA@cluster0.rqzu8.mongodb.net/runbiosimulations?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://biosimulations-api:!s8DulOQ6Rx61@datanator.9dv6u.mongodb.net/biosimulations?retryWrites=true&w=majority
