Update secrets with env and modify YML files

--- a/production/config/dispatch-api/secret.env
+++ b/production/config/dispatch-api/secret.env
@@ -3,3 +3,5 @@ NATS_CLIENT_PORT=4222
 NATS_USERNAME=ruser
 NATS_PASSWORD=T0pS3cr3t
 MONGODB_URI=mongodb+srv://biosimulations-api:!s8DulOQ6Rx61@datanator.9dv6u.mongodb.net/biosimulations?retryWrites=true&w=majority
+HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/simulations
+FILE_STORAGE=/sharedFiles
