change simulators auth audience

--- a/production/config/simulators-api/secret.env
+++ b/production/config/simulators-api/secret.env
@@ -2,7 +2,7 @@
 MONGODB_URI=mongodb+srv://biosimulations-api:!s8DulOQ6Rx61@datanator.9dv6u.mongodb.net/biosimulations?retryWrites=true&w=majority
 AUTH0_DOMAIN=https://auth.biosimulations.org/
 AUTH0_ISSUER=https://auth.biosimulations.org/
-API_AUDIENCE=api.biosimulations.org
+API_AUDIENCE=api.biosimulators.org
 CLIENT_ID=5ed029c0833ac70016d2ae37
 CLIENT_SECRET=6xPosFoZjOHuA6bD6y28w6TWidwFuPYica
 MANAGEMENT_DOMAIN=crbm.auth0.com
