--- a/base/apps/dispatch-api.yml
+++ b/base/apps/dispatch-api.yml
@@ -29,7 +29,7 @@ spec:
             path: /projects/CRBM/biosimulations
       containers:
         - name: dispatch-api
-          image: "biosimulations/dispatch-api"
+          image: "ghcr.io/biosimulations/dispatch-api"
           imagePullPolicy: "Always"
           ports:
             - containerPort: 3333
