--- a/base/apps/ontology-api.yml
+++ b/base/apps/ontology-api.yml
@@ -17,11 +17,10 @@ spec:
     spec:
       containers:
         - name: ontology-api
-          image: biosimulations/ontology-api
+          image: ghcr.io/biosimulations/ontology-api
           imagePullPolicy: "Always"
           ports:
             - containerPort: 3333
-
 ---
 apiVersion: v1
 kind: Service
