--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,31 +1,37 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-generatorOptions:
-  disableNameSuffixHash: true
-
 secretGenerator:
   - name: platform-api-secrets
     namespace: default
     files:
-      - platform-api/secret.env
+      - config/platform-api/secret.env
   - name: account-api-secrets
     namespace: default
     files:
-      - account-api/secret.env
+      - config/account-api/secret.env
   - name: dispatch-api-secrets
     namespace: default
     files:
-      - dispatch-api/secret.env
+      - config/dispatch-api/secret.env
   - name: dispatch-service-secrets
     namespace: default
     files:
-      - dispatch-service/secret.env
+      - config/dispatch-service/secret.env
   - name: simulators-api-secrets
     namespace: default
     files:
-      - simulators-api/secret.env
+      - config/simulators-api/secret.env
   - name: run-api-secrets
     namespace: default
     files:
-      - run-api/secret.env
+      - config/run-api/secret.env
+      
+
+resources:
+- apps/account-api.yml
+- apps/dispatch-api.yml
+- apps/dispatch-service.yml
+- apps/ontology-api.yml
+- apps/platform-api.yml
+- apps/simulators-api.yml
