--- a/overlays/dev/biosimulations-ingress.yml
+++ b/overlays/dev/biosimulations-ingress.yml
@@ -5,44 +5,38 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   name: ingress
-  
+
 spec:
   tls:
     - hosts:
-        - devaccount.biosimulations.dev
-        - devapi.biosimulations.dev
-        - devdispatch.biosimulations.dev
-        - devontology.biosimulations.dev
-        - devrun.biosimulations.dev
+        - account.biosimulations.dev
+        - api.biosimulations.dev
+        - dispatch.biosimulations.dev
+        - ontology.biosimulations.dev
       secretName: biosimulations-ingress-certificate
 
   rules:
-    - host: devaccount.biosimulations.dev
+    - host: account.biosimulations.dev
       http:
         paths:
           - backend:
               serviceName: account-api
               servicePort: 80
 
-    - host: devapi.biosimulations.dev
+    - host: api.biosimulations.dev
       http:
         paths:
           - backend:
               serviceName: platform-api
               servicePort: 80
-    - host: devdispatch.biosimulations.dev
+    - host: dispatch.biosimulations.dev
       http:
         paths:
           - backend:
               serviceName: dispatch-api
               servicePort: 80
-    - host: devrun.biosimulations.dev
-      http:
-        paths:
-          - backend:
-              serviceName: run-api
-              servicePort: 80
-    - host: devontology.biosimulations.dev
+
+    - host: ontology.biosimulations.dev
       http:
         paths:
           - backend:
