--- a/overlays/dev/biosimulations-ingress.yml
+++ b/overlays/dev/biosimulations-ingress.yml
@@ -13,6 +13,7 @@ spec:
         - api.biosimulations.dev
         - dispatch.biosimulations.dev
         - ontology.biosimulations.dev
+        - run.api.biosimulations.dev
       secretName: biosimulations-ingress-certificate
 
   rules:
