--- a/overlays/dev/biosimulations-ingress.yml
+++ b/overlays/dev/biosimulations-ingress.yml
@@ -14,6 +14,7 @@ spec:
         - dispatch.biosimulations.dev
         - ontology.biosimulations.dev
         - run.api.biosimulations.dev
+        - ontology.api.biosimulations.dev
         
       secretName: biosimulations-ingress-certificate
 
@@ -32,6 +33,7 @@ spec:
               serviceName: platform-api
               servicePort: 80
 
+
     - host: dispatch.biosimulations.dev
       http:
         paths:
@@ -45,8 +47,8 @@ spec:
           - backend:
               serviceName: dispatch-api
               servicePort: 80
-              
-    - host: ontology.biosimulations.dev
+
+    - host: ontology.api.biosimulations.dev
       http:
         paths:
           - backend:
