--- a/overlays/deploy/kustomization.yml
+++ b/overlays/deploy/kustomization.yml
@@ -21,7 +21,8 @@ images:
   newTag: 9f4bf8cae8d12e0fb6f6f37e887ca14347eb590b
 - name: ghcr.io/biosimulations/simulators-api
   newTag: 9f4bf8cae8d12e0fb6f6f37e887ca14347eb590b
-
+- name: ghcr.io/biosimulations/mail-service
+  newTag: 9f4bf8cae8d12e0fb6f6f37e887ca14347eb590b
 #Use the prod version of the secrets and ingress
 resources:
 - prod.yml
