--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - apps/ontology-api.yml
 - apps/platform-api.yml
 - apps/simulators-api.yml
+- apps/mail-service.yml
 - resources/mongo.yml
 - resources/redis.yml
 - resources/nats.yml
