--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
         kustomize edit set image ghcr.io/biosimulations/ontology-api:${{ github.event.inputs.tag }}
         kustomize edit set image ghcr.io/biosimulations/simulators-api:${{ github.event.inputs.tag }}
         kustomize edit set image ghcr.io/biosimulations/platform-api:${{ github.event.inputs.tag }}
+        kustomize edit set image ghcr.io/biosimulations/mail-service:${{ github.event.inputs.tag }}
     
     - name: Remove Kustomize
       run: |
