--- a/common/custom/argo/argo-cm.yaml
+++ b/common/custom/argo/argo-cm.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
 data:
+  ui.cssurl:
   # Argo CD's externally facing base URL (optional). Required when configuring SSO
   url: https://deployment.api.biosimulations.org
 
@@ -92,7 +93,7 @@ data:
   # - The path should be specified relative to the "/shared/app" directory; not as an absolute path.
   # Remote CSS Files:
   # - Files may also be loaded from remote locations via fully qualified URLs.
-  #ui.cssurl: "./custom/my-styles.css"
+  ui.cssurl: "https://static.biosimulations.org/argo-styles.css"
 
   # An optional user-defined banner message that's displayed at the top of every UI page.
   # Every time this is updated, it will clear a user's localStorage telling the UI to hide the banner forever.
