--- a/config/dev/kustomization.yml
+++ b/config/dev/kustomization.yml
@@ -2,6 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 configMapGenerator:
+  - name: shared-config
+    namespace: default
+    files:
+      - shared.env
   - name: platform-api-config
     namespace: default
     files:
@@ -26,3 +30,8 @@ configMapGenerator:
     namespace: default
     files:
       - mail-service/config.env
+
+  - name: combine-service-config
+    namespace: default
+    files:
+      - combine-service/config.env
