--- a/config/prod/combine-service/config.env
+++ b/config/prod/combine-service/config.env
@@ -2,5 +2,5 @@ NATS_HOST=nats://nats-cluster:4222
 NATS_QUEUE=combineService
 #UCONN storage bucket
 STORAGE_ENDPOINT=http://s3low.scality.uchc.edu
-STORAGE_BUCKET=biosimdev
-STORAGE_PUBLIC_ENDPOINT=http://biosimdevbucket.cam.uchc.edu/s3/
+STORAGE_BUCKET=biosimprod
+STORAGE_PUBLIC_ENDPOINT=https://data.biosimulations.org/s3/
