--- a/overlays/deploy/biosimulators-ingress.yml
+++ b/overlays/deploy/biosimulators-ingress.yml
@@ -4,6 +4,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
+    nginx.org/client-max-body-size: "600m"
   name: simulators-ingress
   namespace: default
 spec:
