add ingress for hsds

--- a/base/apps/hdf5-service.yml
+++ b/base/apps/hdf5-service.yml
@@ -79,7 +79,7 @@ spec:
             - name: SERVER_NAME
               value: "Highly Scalable Data Service (HSDS)"
             - name: HSDS_ENDPOINT
-              value: http://hsds.biosimulations.dev
+              value: https://hsds.api.biosimulations.dev
             - name: GREETING
               value: "Welcome to HSDS!"
             - name: ABOUT
@@ -121,4 +121,4 @@ spec:
             - name: LOG_LEVEL
               value: DEBUG
             - name: HSDS_ENDPOINT
-              value: http://hsds.biosimulations.dev
+              value: https://hsds.api.biosimulations.dev
