update port binding

--- a/base/apps/hdf5-service.yml
+++ b/base/apps/hdf5-service.yml
@@ -31,7 +31,9 @@ spec:
     app: hsds
   ports:
     - protocol: "TCP"
-      port: 5101
+      targetPort: 5101
+      port: 80
+      name: hsds
 ---
 apiVersion: apps/v1
 kind: Deployment
