--- a/config/dev/kustomization.yml
+++ b/config/dev/kustomization.yml
@@ -39,4 +39,7 @@ configMapGenerator:
     namespace: default
     files:
       - hsds/config.yml
+  - name: hsds-override
+    namespace: default
+    files:
       - hsds/override.yml
