--- a/base/apps/hdf5-service.yml
+++ b/base/apps/hdf5-service.yml
@@ -129,7 +129,7 @@ spec:
             - name: AWS_REGION
               value: us-east-1
             - name: BUCKET_NAME
-              value: hsds.bucket
+              value: biosimdev
             - name: LOG_LEVEL
               value: DEBUG
             - name: HSDS_ENDPOINT
