--- a/config/dev/hsds/config.yml
+++ b/config/dev/hsds/config.yml
@@ -1,10 +1,10 @@
 # HSDS configuration
 allow_noauth: true # enable unauthenticated requests
 auth_expiration: -1 # set an expiration for credential caching
-default_public: True # new domains are publically readable by default
-aws_access_key_id: xxx # Replace with access key for account or use aws_iam_role
-aws_secret_access_key: xxx # Replace with secret key for account
-aws_iam_role: hsds_role # For EC2 using IAM roles
+default_public: true # new domains are publically readable by default
+aws_access_key_id: null # Replace with access key for account or use aws_iam_role
+aws_secret_access_key: null # Replace with secret key for account
+aws_iam_role: null # For EC2 using IAM roles
 aws_region: us-east-1
 hsds_endpoint: http://hsds.hdf.test # used for hateos links in response
 head_endpoint: null # optionally used for nodes to register
@@ -57,7 +57,7 @@ data_cache_expire_time: 3600 # expire cache items after one hour
 data_cache_page_size: 4m # page size for range get cache, set to zero to disable proxy
 data_cache_max_concurrent_read: 16 # maximum number of inflight storage read requests
 timeout: 30 # http timeout - 30 sec
-password_file: "" # filepath to a text file of username/passwords. set to '' for no-auth access
+password_file: "/config/passwd.txt" # filepath to a text file of username/passwords. set to '' for no-auth access
 groups_file: /config/groups.txt # filepath to text file defining user groups
 server_name: Highly Scalable Data Service (HSDS) # this gets returned in the about request
 greeting: Welcome to HSDS!
