--- a/config/dev/hsds/config.yml
+++ b/config/dev/hsds/config.yml
@@ -57,7 +57,7 @@ data_cache_expire_time: 3600 # expire cache items after one hour
 data_cache_page_size: 4m # page size for range get cache, set to zero to disable proxy
 data_cache_max_concurrent_read: 16 # maximum number of inflight storage read requests
 timeout: 30 # http timeout - 30 sec
-password_file: "/config/password/passwd.txt" # filepath to a text file of username/passwords. set to '' for no-auth access
+password_file: "/config/passwd.txt" # filepath to a text file of username/passwords. set to '' for no-auth access
 groups_file: /config/groups.txt # filepath to text file defining user groups
 server_name: Highly Scalable Data Service (HSDS) # this gets returned in the about request
 greeting: Welcome to HSDS!
